test_regress/t/t_display_bad.out
%Error: t/t_display_bad.v:10: Missing arguments for $display-like format
      $display("%x");   
      ^~~~~~~~
%Error: t/t_display_bad.v:12: Unknown $display-like format code: '%q'
      $display("%q");   
      ^~~~~~~~
%Error: Exiting due to
